[gd_scene load_steps=4 format=3 uid="uid://cqx7b8yw2m3pk"]

[ext_resource type="Script" uid="uid://b57wf3afxq7ce" path="res://UI/main_menu.gd" id="1_main_menu"]
[ext_resource type="Texture2D" uid="uid://dw7wh6ase3g4x" path="res://Textures/Keyart.png" id="2_d8nwk"]
[ext_resource type="FontFile" uid="uid://cgdwsoadivd8t" path="res://Font/Ghoulish.ttf" id="3_4cwpn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(321.60498, 180.58751)
scale = Vector2(0.07896083, 0.07896083)
texture = ExtResource("2_d8nwk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_4cwpn")
theme_override_font_sizes/font_size = 60
text = "MineHaunt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
